--- a/src/libs/liblzf-3.4/Makefile.kmk
+++ b/src/libs/liblzf-3.4/Makefile.kmk
@@ -1,4 +1,4 @@
-# $Id: Makefile.kmk 31514 2010-08-10 09:53:44Z noreply@oracle.com $
+# $Id: Makefile.kmk 31594 2010-08-12 09:56:25Z noreply@oracle.com $
 ## @file
 # Sub-Makefile for liblzf.
 #
@@ -21,7 +21,8 @@ include $(KBUILD_PATH)/subheader.kmk
 
 LIBRARIES += VBox-liblzf
 if1of ($(KBUILD_TARGET),os2 win)
- LIBRARIES += VBox-liblzf-static
+ # only required for (now) disabled VBoxFidHdd
+ # LIBRARIES += VBox-liblzf-static
 endif
 VBox-liblzf_TEMPLATE = VBOXR3
 VBox-liblzf_BLD_TYPE = release # WARNING! Always optimizing this lib.
