--- a/src/VBox/Main/webservice/Makefile.kmk
+++ b/src/VBox/Main/webservice/Makefile.kmk
@@ -1,4 +1,4 @@
-# $Id: Makefile.kmk 31234 2010-07-30 10:01:46Z noreply@oracle.com $
+# $Id: Makefile.kmk 31632 2010-08-13 09:56:59Z knut.osmundsen@oracle.com $
 ## @file
 # Sub-Makefile for the VBox web service.
 #
@@ -667,7 +667,13 @@ $(VBOXWEB_METRICSAMPLE): $(VBOX_PATH_WEBSERVICE)/samples/java/jax-ws/metrictest.
 	$(QUIET)$(SED) -e 's/{VBOX_API_SUFFIX}/$(VBOX_API_SUFFIX)/' <  $< >  $@
 
 # generate jax-ws wrapper for java client code
-$(VBOXWEB_GLUE_JAVA_TMP): $(VBOXWEB_IDL_SRC) $(VBOX_PATH_WEBSERVICE)/glue-jaxws.xsl $(VBOX_PATH_WEBSERVICE)/websrv-shared.inc.xsl $(RECOMPILE_ON_MAKEFILE_CURRENT) | $$(dir $$@)
+$(VBOXWEB_GLUE_JAVA_TMP): \
+		$(VBOXWEB_IDL_SRC) \
+		$(VBOX_PATH_WEBSERVICE)/glue-jaxws.xsl \
+		$(VBOX_PATH_WEBSERVICE)/websrv-shared.inc.xsl \
+		$(RECOMPILE_ON_MAKEFILE_CURRENT) \
+		| $$(dir $$@) \
+		$(VBOX_FILESPLIT)
 	$(QUIET)$(MKDIR) -p $(@D)
 	$(call MSG_GENERATE,,$@,$(VBOXWEB_IDL_SRC) using glue-jaxws.xsl)
 	$(QUIET)$(VBOX_XSLTPROC) $(VBOXWEB_XSLTPROC_VERBOSE) \
