--- a/src/VBox/Installer/linux/Makefile.kmk
+++ b/src/VBox/Installer/linux/Makefile.kmk
@@ -1,4 +1,4 @@
-# $Id: Makefile.kmk 31554 2010-08-11 06:48:09Z noreply@oracle.com $
+# $Id: Makefile.kmk 31641 2010-08-13 12:37:29Z noreply@oracle.com $
 ## @file
 # Makefile for the Linux installer.
 #
@@ -36,10 +36,9 @@ VBOX_LNX_INST_DEP_ON_MAKEFILE := $(MAKEFILE_CURRENT)
 
 BLDDIRS  += $(VBOX_LNX_INST_OUT_DIR) $(VBOX_LNX_INST_STAGE_DIR)
 PACKING  += $(PATH_BIN)/VirtualBox.tar.bz2
-if !defined(VBOX_NO_LINUX_RUN_INSTALLER) && !defined(VBOX_OSE)
+if !defined(VBOX_NO_LINUX_RUN_INSTALLER)
  PACKING += $(PATH_BIN)/$(VBOX_LNX_PACKAGE_NAME) \
             $(PATH_BIN)/VirtualBox-dbg.tar.bz2
-endif
 
 OTHER_CLEAN   += \
 	$(addprefix $(VBOX_LNX_INST_STAGE_DIR)/,\
