Installer/darwin/.kmk: use the right variable.
svn:sync-xref-src-repo-rev: r64825

--- a/src/VBox/Installer/darwin/Makefile.kmk
+++ b/src/VBox/Installer/darwin/Makefile.kmk
@@ -1,4 +1,4 @@
-# $Id: Makefile.kmk 31681 2010-08-16 09:19:01Z knut.osmundsen@oracle.com $
+# $Id: Makefile.kmk 31682 2010-08-16 09:22:39Z knut.osmundsen@oracle.com $
 ## @file
 # Install misc stuff and create dist packages for Mac OS X.
 #
@@ -1070,6 +1070,8 @@ endif
 		$(VBOX_PATH_PACK_TMP)/VirtualBoxCLI.pkg.desc \
 		$(VBOX_PATH_PACK_TMP)/VirtualBoxCLI.pkg.res
 
+
 ifndef VBOX_OSE
- include $(PATH_SUB_CURRENT)/darwin/Bundle.kmk
+ include $(VBOX_PATH_DI_SRC)/Bundle.kmk
 endif
+
