--- a/src/VBox/Additions/WINNT/Graphics/Display/Makefile.kmk
+++ b/src/VBox/Additions/WINNT/Graphics/Display/Makefile.kmk
@@ -1,4 +1,4 @@
-# $Id: Makefile.kmk 30855 2010-07-14 18:38:43Z noreply@oracle.com $
+# $Id: Makefile.kmk 31687 2010-08-16 10:59:01Z noreply@oracle.com $
 ## @file
 # Sub-Makefile for VBoxDisp.dll.
 #
@@ -89,6 +89,7 @@ VBoxDispD3D_SOURCES  = \
     wddm/VBoxDispD3DIf.cpp \
     wddm/VBoxDispCm.cpp \
     wddm/VBoxDispMp.cpp \
+    wddm/VBoxScreen.cpp \
     wddm/VBoxDispMpTst.cpp \
 	wddm/VBoxDispD3D.def \
 	wddm/VBoxDispD3D.rc
