--- a/src/VBox/Additions/WINNT/Graphics/Wine/Makefile.kmk
+++ b/src/VBox/Additions/WINNT/Graphics/Wine/Makefile.kmk
@@ -1,4 +1,4 @@
-# $Id: Makefile.kmk 30973 2010-07-21 17:32:17Z noreply@oracle.com $
+# $Id: Makefile.kmk 31687 2010-08-16 10:59:01Z noreply@oracle.com $
 ## @file
 # Makefile for the Wine D3D related dlls for VirtualBox.
 #
@@ -125,7 +125,7 @@ wined3d_DEFS         = __WINESRC__ WINE_UNICODE_API="" _REENTRANT WINE_NOWINSOCK
     BIN_TO_DLLDIR=\"\" \
     LIB_TO_DATADIR=\"\" \
     BIN_TO_DATADIR=\"\"
-if "$(KBUILD_TYPE)" != "debug" || !defined(DEBUG_misha)
+if "$(KBUILD_TYPE)" != "debug" || defined(DEBUG_misha)
  wined3d_DEFS        += WINE_NO_DEBUG_MSGS
 endif
 ifdef VBOXWDDM
@@ -182,7 +182,7 @@ VBoxD3D8_DEFS         = __WINESRC__ WINE_UNICODE_API="" _REENTRANT WINE_NOWINSOC
     BIN_TO_DLLDIR=\"\" \
     LIB_TO_DATADIR=\"\" \
     BIN_TO_DATADIR=\"\"
-if "$(KBUILD_TYPE)" != "debug" || !defined(DEBUG_misha)
+if "$(KBUILD_TYPE)" != "debug" || defined(DEBUG_misha)
  VBoxD3D8_DEFS       += WINE_NO_DEBUG_MSGS
 endif
 #ifdef VBOXWDDM
@@ -219,7 +219,7 @@ VBoxD3D9_DEFS         = __WINESRC__ WINE_UNICODE_API="" _REENTRANT WINE_NOWINSOC
     BIN_TO_DLLDIR=\"\" \
     LIB_TO_DATADIR=\"\" \
     BIN_TO_DATADIR=\"\"
-if "$(KBUILD_TYPE)" != "debug" || !defined(DEBUG_misha)
+if "$(KBUILD_TYPE)" != "debug" || defined(DEBUG_misha)
  VBoxD3D9_DEFS       += WINE_NO_DEBUG_MSGS
 endif
 ifdef VBOXWDDM
