--- a/src/VBox/VMM/Makefile.kmk
+++ b/src/VBox/VMM/Makefile.kmk
@@ -1,4 +1,4 @@
-# $Id: Makefile.kmk 31491 2010-08-09 16:13:37Z knut.osmundsen@oracle.com $
+# $Id: Makefile.kmk 31721 2010-08-17 11:47:52Z noreply@oracle.com $
 ## @file
 # Top-level makefile for the VMM.
 #
@@ -87,6 +87,7 @@ VMMR3_SOURCES   = \
 	EM.cpp \
 	EMRaw.cpp \
 	EMHwaccm.cpp \
+	FTM.cpp \
 	IOM.cpp \
 	GMM.cpp \
 	MM.cpp \
