make it possible to build FFMPEG on solaris
svn:sync-xref-src-repo-rev: r64939

--- a/src/libs/Makefile.kmk
+++ b/src/libs/Makefile.kmk
@@ -1,4 +1,4 @@
-# $Id: Makefile.kmk 29268 2010-05-09 21:22:33Z knut.osmundsen@oracle.com $
+# $Id: Makefile.kmk 31758 2010-08-18 12:16:24Z noreply@oracle.com $
 ## @file
 # Top-level makefile for the external libraries.
 #
@@ -78,7 +78,7 @@ if defined(VBOX_WITH_MAIN)
 
  # FFmpeg for test videos.
  if defined(VBOX_WITH_FFMPEG) && !defined(VBOX_OSE) && !defined(VBOX_ONLY_DOCS) && !defined(VBOX_WITH_SDK)
-  if1of ($(KBUILD_TARGET), darwin linux)
+  if1of ($(KBUILD_TARGET), darwin linux solaris)
    include $(PATH_SUB_CURRENT)/ffmpeg-20060710/Makefile.kmk
   endif
  endif
