tstRTCoreDump: enable building.
svn:sync-xref-src-repo-rev: r64976

--- a/src/VBox/Runtime/testcase/Makefile.kmk
+++ b/src/VBox/Runtime/testcase/Makefile.kmk
@@ -1,4 +1,4 @@
-# $Id: Makefile.kmk 31375 2010-08-04 21:41:06Z noreply@oracle.com $
+# $Id: Makefile.kmk 31787 2010-08-19 13:04:31Z ramshankar.venkataraman@oracle.com $
 ## @file
 # Sub-Makefile for the IPRT testcases.
 #
@@ -125,6 +125,8 @@ PROGRAMS.linux += \
 	tstRTBitOperationsPIC3 \
 	tstInlineAsmPIC \
 	tstInlineAsmPIC3
+PROGRAMS.solaris += \
+	tstRTCoreDump
 PROGRAMS.l4 += \
 	tstIoCtl
 PROGRAMS.darwin += \
@@ -492,6 +494,9 @@ tstRTUuid_TEMPLATE = VBOXR3TSTEXE
 tstRTUuid_SOURCES = tstRTUuid.cpp
 
 tstUtf8_SOURCES = tstUtf8.cpp
+
+tstRTCoreDump_TEMPLACE = VBOXR3TSTEXE
+tstRTCoreDump_SOURCES = tstRTCoreDump.cpp
 
 #
 # odds and ends
