--- a/src/VBox/VMM/Makefile.kmk
+++ b/src/VBox/VMM/Makefile.kmk
@@ -1,4 +1,4 @@
-# $Id: Makefile.kmk 31721 2010-08-17 11:47:52Z noreply@oracle.com $
+# $Id: Makefile.kmk 31789 2010-08-19 13:44:54Z noreply@oracle.com $
 ## @file
 # Top-level makefile for the VMM.
 #
@@ -146,6 +146,7 @@ VMMR3_SOURCES   = \
 	VMMAll/SELMAll.cpp \
 	VMMAll/EMAll.cpp \
 	VMMAll/EMAllA.asm \
+	VMMAll/FTMAll.cpp \
 	VMMAll/TMAll.cpp \
 	VMMAll/TMAllCpu.cpp \
 	VMMAll/TMAllReal.cpp \
@@ -372,6 +373,7 @@ ifdef VBOX_WITH_RAW_MODE
  	VMMAll/IOMAllMMIO.cpp \
  	VMMAll/EMAll.cpp \
  	VMMAll/EMAllA.asm \
+	VMMAll/FTMAll.cpp \
  	VMMAll/MMAll.cpp \
  	VMMAll/MMAllHyper.cpp \
  	VMMAll/PDMAll.cpp \
@@ -461,6 +463,7 @@ VMMR0_SOURCES   = \
 	VMMAll/DBGFAll.cpp \
 	VMMAll/EMAll.cpp \
 	VMMAll/EMAllA.asm \
+	VMMAll/FTMAll.cpp \
 	VMMAll/HWACCMAll.cpp \
 	VMMAll/IOMAll.cpp \
 	VMMAll/IOMAllMMIO.cpp \
