IPRT,SUP: Moved the strformat*.cpp completely out of RuntimeR0 on all platforms so that %RT[pgmpage] will work in ring-0. Minor SUPDrv IOC interface version increment.
svn:sync-xref-src-repo-rev: r65031

--- a/src/VBox/HostDrivers/Support/freebsd/Makefile
+++ b/src/VBox/HostDrivers/Support/freebsd/Makefile
@@ -1,4 +1,4 @@
-# $Id: Makefile 28800 2010-04-27 08:22:32Z noreply@oracle.com $
+# $Id: Makefile 31829 2010-08-20 23:19:37Z knut.osmundsen@oracle.com $
 ## @file
 # Makefile for the VirtualBox FreeBSD Host Driver.
 #
@@ -104,7 +104,8 @@ SRCS += \
 .PATH:	${.CURDIR}/common/checksum
 SRCS += \
 	crc32.c \
-	ipv4.c
+	ipv4.c \
+	ipv6.c
 
 .PATH:	${.CURDIR}/common/table
 SRCS += \
