RTCoreDumper: integration into IPRT, cleanup.
svn:sync-xref-src-repo-rev: r65068

--- a/src/VBox/Runtime/Makefile.kmk
+++ b/src/VBox/Runtime/Makefile.kmk
@@ -1,4 +1,4 @@
-# $Id: Makefile.kmk 31829 2010-08-20 23:19:37Z knut.osmundsen@oracle.com $
+# $Id: Makefile.kmk 31860 2010-08-23 13:56:17Z ramshankar.venkataraman@oracle.com $
 ## @file
 # Sub-Makefile for the IPRT (IPRT).
 #
@@ -758,6 +758,7 @@ RuntimeR3_SOURCES.solaris = \
 	r3/posix/utf8-posix.cpp \
 	r3/solaris/alloc-solaris.cpp \
 	r3/solaris/mp-solaris.cpp \
+	r3/solaris/coredumper-solaris.cpp \
 	r3/solaris/rtProcInitExePath-solaris.cpp
 RuntimeR3_SOURCES.solaris.amd64 = \
 	r3/solaris/RTSystemQueryDmiString-solaris.cpp
