--- a/src/VBox/Devices/Makefile.kmk
+++ b/src/VBox/Devices/Makefile.kmk
@@ -1,4 +1,4 @@
-# $Id: Makefile.kmk 31762 2010-08-18 13:15:10Z noreply@oracle.com $
+# $Id: Makefile.kmk 31911 2010-08-24 11:56:45Z noreply@oracle.com $
 ## @file
 # Top-level sub-makefile for the devices, drivers and services.
 #
@@ -1136,7 +1136,7 @@ ifdef VBOX_WITH_USB
  Drivers_DEFS.solaris    += VUSB_HAVE_USBPROXY_DEVICE
  Drivers_SOURCES.solaris += \
 	USB/USBProxyDevice.cpp \
-	USB/solaris/$(if $(VBOX_WITH_NEW_USB_CODE_ON_SOLARIS),USBProxyDevice2-solaris.cpp,USBProxyDevice-solaris.cpp)
+	USB/solaris/USBProxyDevice-solaris.cpp
 
  Drivers_DEFS.freebsd      += VUSB_HAVE_USBPROXY_DEVICE
  Drivers_SOURCES.freebsd   += \
