--- a/src/VBox/Installer/solaris/Makefile.kmk
+++ b/src/VBox/Installer/solaris/Makefile.kmk
@@ -1,4 +1,4 @@
-# $Id: Makefile.kmk 31390 2010-08-05 11:10:13Z ramshankar.venkataraman@oracle.com $
+# $Id: Makefile.kmk 31911 2010-08-24 11:56:45Z noreply@oracle.com $
 ## @file
 # Sub-Makefile for the Solaris installer.
 #
@@ -162,7 +162,7 @@ solaris-drv-confs_SOURCES = \
 	$(if $(VBOX_WITH_NETFLT),$(PATH_ROOT)/src/VBox/HostDrivers/VBoxNetFlt/solaris/vboxflt.conf) \
 	$(if $(VBOX_WITH_NETADP),$(PATH_ROOT)/src/VBox/HostDrivers/VBoxNetAdp/solaris/vboxnet.conf) \
 	$(if $(VBOX_WITH_USB),$(PATH_ROOT)/src/VBox/HostDrivers/VBoxUSB/solaris/vboxusbmon.conf) \
-	$(if $(VBOX_WITH_NEW_USB_CODE_ON_SOLARIS),$(PATH_ROOT)/src/VBox/HostDrivers/VBoxUSB/solaris/vboxusb.conf)
+	$(if $(VBOX_WITH_USB),$(PATH_ROOT)/src/VBox/HostDrivers/VBoxUSB/solaris/vboxusb.conf)
 
 #
 # Note: Other than the files produced during packing (.pkg, .gzip etc.) all files that
@@ -184,25 +184,19 @@ SOLARIS_STRIP_EXES = \
 	VBoxXPCOMIPCD \
 	$(if $(VBOX_WITH_KCHMVIEWER),kchmviewer,)
 
-ifdef VBOX_WITH_USB
- ifndef VBOX_WITH_NEW_USB_CODE_ON_SOLARIS
-	SOLARIS_STRIP_EXES += VBoxUSBHelper
- endif
-endif
-
 SOLARIS_DRIVER_BINS = \
 	vboxdrv \
 	$(if $(VBOX_WITH_NETFLT),vboxflt,) \
 	$(if $(VBOX_WITH_NETADP),vboxnet,) \
 	$(if $(VBOX_WITH_USB),vboxusbmon,) \
-	$(if $(VBOX_WITH_NEW_USB_CODE_ON_SOLARIS),vboxusb,)
+	$(if $(VBOX_WITH_USB),vboxusb,)
 
 SOLARIS_DRIVER_CONFS = \
 	vboxdrv.conf \
 	$(if $(VBOX_WITH_NETFLT),vboxflt.conf,) \
 	$(if $(VBOX_WITH_NETADP),vboxnet.conf,) \
 	$(if $(VBOX_WITH_USB),vboxusbmon.conf,) \
-	$(if $(VBOX_WITH_NEW_USB_CODE_ON_SOLARIS),vboxusb.conf,)
+	$(if $(VBOX_WITH_USB),vboxusb.conf,)
 
 # Strip these binaries
 SOLARIS_STRIP_BINS = \
