--- a/src/VBox/Main/Makefile.kmk
+++ b/src/VBox/Main/Makefile.kmk
@@ -1,4 +1,4 @@
-# $Id: Makefile.kmk 31911 2010-08-24 11:56:45Z noreply@oracle.com $
+# $Id: Makefile.kmk 31958 2010-08-25 13:28:44Z noreply@oracle.com $
 ## @file
 # Makefile for the VBox Main module.
 #
@@ -259,6 +259,7 @@ endif
 VBoxSVC_LIBS += \
 	$(PATH_LIB)/SSMStandalone$(VBOX_SUFF_LIB) \
 	$(LIB_DDU)
+VBoxSVC_SDKS =  VBOX_LIBPNG
 VBoxSVC_LIBS.solaris = \
 	adm \
 	nsl \
@@ -307,6 +308,8 @@ VBoxSVC_SOURCES = \
 	BIOSSettingsImpl.cpp \
 	HostPower.cpp \
 	EventImpl.cpp \
+	DisplayPNGUtil.cpp \
+	DisplayResampleImage.cpp \
 	$(VBOX_AUTOGEN_EVENT_CPP) \
 	$(if $(VBOX_WITH_VRDP),VRDPServerImpl.cpp,) \
 	$(if $(VBOX_WITH_XPCOM),xpcom/server.cpp,) \
@@ -632,6 +635,7 @@ VBoxC_SOURCES = \
 	KeyboardImpl.cpp \
 	MouseImpl.cpp \
 	DisplayImpl.cpp \
+	DisplayPNGUtil.cpp \
 	DisplayResampleImage.cpp \
 	MachineDebuggerImpl.cpp \
 	VBoxDriversRegister.cpp \
