--- a/src/VBox/Main/Makefile.kmk
+++ b/src/VBox/Main/Makefile.kmk
@@ -1,4 +1,4 @@
-# $Id: Makefile.kmk 31958 2010-08-25 13:28:44Z noreply@oracle.com $
+# $Id: Makefile.kmk 31960 2010-08-25 13:36:44Z noreply@oracle.com $
 ## @file
 # Makefile for the VBox Main module.
 #
@@ -259,7 +259,7 @@ endif
 VBoxSVC_LIBS += \
 	$(PATH_LIB)/SSMStandalone$(VBOX_SUFF_LIB) \
 	$(LIB_DDU)
-VBoxSVC_SDKS =  VBOX_LIBPNG
+VBoxSVC_SDKS =  VBOX_LIBPNG VBOX_ZLIB
 VBoxSVC_LIBS.solaris = \
 	adm \
 	nsl \
