--- a/src/VBox/Installer/darwin/Makefile.kmk
+++ b/src/VBox/Installer/darwin/Makefile.kmk
@@ -1,4 +1,4 @@
-# $Id: Makefile.kmk 31968 2010-08-25 18:34:23Z noreply@oracle.com $
+# $Id: Makefile.kmk 31969 2010-08-25 18:49:04Z noreply@oracle.com $
 ## @file
 # Install misc stuff and create dist packages for Mac OS X.
 #
@@ -567,8 +567,11 @@ VBOX_DI_VBAPP_DYLIBS = \
 	MacOS/VBoxXPCOMC.dylib \
 	MacOS/components/VBoxC.dylib \
 	MacOS/components/VBoxSVCM.dylib \
-	MacOS/components/VBoxXPCOMIPCC.dylib \
+	MacOS/components/VBoxXPCOMIPCC.dylib
+ifneq ($(wildcard $(VBOX_PATH_DIST)/VirtualBox.app/Contents/MacOS/accessible/libqtaccessiblewidgets.dylib),)
+ VBOX_DI_VBAPP_DYLIBS += \
 	MacOS/accessible/libqtaccessiblewidgets.dylib
+endif
 ifdef VBOX_WITH_GUEST_CONTROL
  VBOX_DI_VBAPP_DYLIBS += \
 	MacOS/VBoxGuestControlSvc.dylib
