Installer-OSX: do install_name with the full path of the Qt package as well
svn:sync-xref-src-repo-rev: r65206

--- a/src/VBox/Installer/darwin/Makefile.kmk
+++ b/src/VBox/Installer/darwin/Makefile.kmk
@@ -1,4 +1,4 @@
-# $Id: Makefile.kmk 31970 2010-08-25 19:04:51Z noreply@oracle.com $
+# $Id: Makefile.kmk 31971 2010-08-25 21:41:41Z noreply@oracle.com $
 ## @file
 # Install misc stuff and create dist packages for Mac OS X.
 #
@@ -910,6 +910,8 @@ if 1
 		,install_name_tool \
 			$(foreach qtmod, $(VBOX_DI_VBAPP_QTMODS), \
 				-change           @executable_path/../Frameworks/$(qtmod)$(VBOX_QT4_INFIX).framework/Versions/4/$(qtmod)$(VBOX_QT4_INFIX) \
+				/Applications/VirtualBox.app/Contents/Frameworks/$(qtmod)$(VBOX_QT4_INFIX).framework/Versions/4/$(qtmod)$(VBOX_QT4_INFIX) \
+				-change              $(VBOX_PATH_QT4)/Frameworks/$(qtmod)$(VBOX_QT4_INFIX).framework/Versions/4/$(qtmod)$(VBOX_QT4_INFIX) \
 				/Applications/VirtualBox.app/Contents/Frameworks/$(qtmod)$(VBOX_QT4_INFIX).framework/Versions/4/$(qtmod)$(VBOX_QT4_INFIX) \
 				-change                                          $(qtmod)$(VBOX_QT4_INFIX).framework/Versions/4/$(qtmod)$(VBOX_QT4_INFIX) \
 				/Applications/VirtualBox.app/Contents/Frameworks/$(qtmod)$(VBOX_QT4_INFIX).framework/Versions/4/$(qtmod)$(VBOX_QT4_INFIX) \
