VMM/DBGFCoreWrite: skeleton.
svn:sync-xref-src-repo-rev: r65253

--- a/src/VBox/VMM/Makefile.kmk
+++ b/src/VBox/VMM/Makefile.kmk
@@ -1,4 +1,4 @@
-# $Id: Makefile.kmk 31789 2010-08-19 13:44:54Z noreply@oracle.com $
+# $Id: Makefile.kmk 32006 2010-08-26 16:14:33Z ramshankar.venkataraman@oracle.com $
 ## @file
 # Top-level makefile for the VMM.
 #
@@ -75,6 +75,7 @@ VMMR3_SOURCES   = \
 	DBGFAddr.cpp \
 	DBGFAddrSpace.cpp \
 	DBGFBp.cpp \
+	DBGFCoreWrite.cpp \
 	DBGFCpu.cpp \
 	DBGFDisas.cpp \
 	DBGFInfo.cpp \
