--- a/src/VBox/Installer/win/InstallHelper/Makefile.kmk
+++ b/src/VBox/Installer/win/InstallHelper/Makefile.kmk
@@ -1,10 +1,10 @@
-# $Id: Makefile.kmk 31859 2010-08-23 12:50:24Z noreply@oracle.com $
+# $Id: Makefile.kmk 32112 2010-08-31 08:44:09Z knut.osmundsen@oracle.com $
 ## @file
 # Sub-Makefile for VBoxInstallHelper.dll.
 #
 
 #
-# Copyright (C) 2010 Oracle Corporation
+# Copyright (C) 2008-2010 Oracle Corporation
 #
 # This file is part of VirtualBox Open Source Edition (OSE), as
 # available from http://www.virtualbox.org. This file is free software;
@@ -50,3 +50,4 @@ ifeq ($(KBUILD_TARGET),win)
 endif
 
 include	$(KBUILD_PATH)/subfooter.kmk
+
