--- a/src/VBox/Additions/WINNT/Graphics/Display/Makefile.kmk
+++ b/src/VBox/Additions/WINNT/Graphics/Display/Makefile.kmk
@@ -1,4 +1,4 @@
-# $Id: Makefile.kmk 31687 2010-08-16 10:59:01Z noreply@oracle.com $
+# $Id: Makefile.kmk 32175 2010-09-01 13:01:45Z noreply@oracle.com $
 ## @file
 # Sub-Makefile for VBoxDisp.dll.
 #
@@ -114,7 +114,17 @@ vbvdbg_SOURCES  = \
 	wddm/dbg/VBoxVideoWinDbg.cpp \
 	wddm/dbg/VBoxVideoWinDbg.def
 vbvdbg_SDKS     = WINDDKWLH
+
+PROGRAMS += tstMvWnd
+tstMvWnd_TEMPLATE = VBOXR3EXE
+tstMvWnd_DEFS = UNICODE _UNICODE 
+tstMvWnd_SOURCES  = \
+	wddm/dbg/tstMvWnd.cpp
+tstMvWnd_LIBS  = \
+        $(LIB_RUNTIME)
+tstMvWnd_LDFLAGS.win = /SUBSYSTEM:windows
 endif
+
 
 include	$(KBUILD_PATH)/subfooter.kmk
 
