--- a/src/VBox/HostServices/SharedOpenGL/Makefile.kmk
+++ b/src/VBox/HostServices/SharedOpenGL/Makefile.kmk
@@ -1,4 +1,4 @@
-# $Id: Makefile.kmk 29856 2010-05-28 11:53:37Z noreply@oracle.com $
+# $Id: Makefile.kmk 32175 2010-09-01 13:01:45Z noreply@oracle.com $
 ## @file
 # Sub-Makefile for the VirtualBox HGCM Service.
 #
@@ -143,6 +143,9 @@ VBoxOGLcrserverlib_CLEAN = \
 	$(VBOX_PATH_CROGL_GENFILES)/server_get.c \
 	$(VBOX_PATH_CROGL_GENFILES)/server_simpleget.c \
 	$(VBOX_PATH_CROGL_GENFILES)/server_dispatch.h
+ifdef VBOXCR_LOGFPS
+VBoxOGLcrserverlib_DEFS += VBOXCR_LOGFPS 
+endif	
 
 #
 # Generate files for VBoxOGLcrserverlib
