--- a/src/VBox/Main/Makefile.kmk
+++ b/src/VBox/Main/Makefile.kmk
@@ -1,4 +1,4 @@
-# $Id: Makefile.kmk 32228 2010-09-03 06:39:52Z noreply@oracle.com $
+# $Id: Makefile.kmk 32231 2010-09-03 08:22:35Z noreply@oracle.com $
 ## @file
 # Makefile for the VBox Main module.
 #
@@ -120,6 +120,7 @@ $(VBOX_XIDL_FILE).ts +| $(VBOX_XIDL_FILE): \
 	$(VBOX_XSLTPROC) -o $(VBOX_XIDL_FILE).ts $(VBOX_PATH_MAIN_SRC)/idl/docstrip.xsl $<
 	$(CP) --changed -fv $(VBOX_XIDL_FILE).ts $(VBOX_XIDL_FILE)
 
+OTHER_CLEAN += $(VBOX_XIDL_FILE) $(VBOX_XIDL_FILE).ts
 
 #
 # The Main API documentation
@@ -188,6 +189,7 @@ VBOX_XML_SCHEMADEFS_CPP = $(PATH_TARGET)/Main/SchemaDefs.cpp
 VBOX_XML_SCHEMADEFS_XSL = $(VBOX_PATH_MAIN_SRC)/xml/SchemaDefs.xsl
 
 VBOX_AUTOGEN_EVENT_CPP  = $(PATH_TARGET)/Main/VBoxEvents.cpp
+OTHER_CLEAN    += $(VBOX_AUTOGEN_EVENT_CPP)
 
 testschemadefs: $(VBOX_XML_SCHEMADEFS_H) $(VBOX_XML_SCHEMADEFS_CPP)
 
