--- a/src/libs/Makefile.kmk
+++ b/src/libs/Makefile.kmk
@@ -1,4 +1,4 @@
-# $Id: Makefile.kmk 31758 2010-08-18 12:16:24Z noreply@oracle.com $
+# $Id: Makefile.kmk 32233 2010-09-03 09:51:40Z noreply@oracle.com $
 ## @file
 # Top-level makefile for the external libraries.
 #
@@ -52,7 +52,7 @@ endif
 #if defined(VBOX_WITH_VRDP) && !defined(VBOX_ONLY_SDK) - this isn't right, thus:
 if !defined(VBOX_ONLY_SDK) \
  && "$(SDK_VBOX_OPENSSL_INCS)" == "$(SDK_VBOX_OPENSSL_VBOX_DEFAULT_INCS)"
- include $(PATH_SUB_CURRENT)/openssl-0.9.8k/Makefile.kmk
+ include $(PATH_SUB_CURRENT)/openssl-0.9.8o/Makefile.kmk
 endif
 
 # libjpeg for VRDP video acceleration
