--- a/src/VBox/Additions/WINNT/Installer/Makefile.kmk
+++ b/src/VBox/Additions/WINNT/Installer/Makefile.kmk
@@ -1,4 +1,4 @@
-# $Id: Makefile.kmk 32241 2010-09-06 04:52:56Z noreply@oracle.com $
+# $Id: Makefile.kmk 32250 2010-09-06 13:55:20Z noreply@oracle.com $
 ## @file
 # Sub-Makefile for the Windows Guest Additions Installer.
 #
@@ -43,6 +43,9 @@ PROGRAMS += VBoxDrvInst
 VBoxDrvInst_TEMPLATE= VBOXGUESTR3EXE
 VBoxDrvInst_DEFS    = _WIN32_WINNT=0x0400 _UNICODE UNICODE
 VBoxDrvInst_DEFS   += VBOX_SVN_REV=$(VBOX_SVN_REV)
+ifdef VBOXWDDM
+ VBoxDrvInst_DEFS  += VBOXWDDM
+endif
 VBoxDrvInst_DEPS    = $(VBOX_SVN_REV_KMK)
 VBoxDrvInst_SDKS    = WINPSDK W2K3DDK
 VBoxDrvInst_LIBS    = \
