--- a/src/VBox/VMM/Makefile.kmk
+++ b/src/VBox/VMM/Makefile.kmk
@@ -1,4 +1,4 @@
-# $Id: Makefile.kmk 32006 2010-08-26 16:14:33Z ramshankar.venkataraman@oracle.com $
+# $Id: Makefile.kmk 32253 2010-09-06 15:14:24Z ramshankar.venkataraman@oracle.com $
 ## @file
 # Top-level makefile for the VMM.
 #
@@ -48,7 +48,7 @@ LIBRARIES += VMMR3
 
 VMMR3_TEMPLATE  = VBoxR3Dll
 
-VMMR3_DEFS      = IN_VMM_R3 IN_DIS IN_GMM_R3 IN_DBG $(VMM_COMMON_DEFS)
+VMMR3_DEFS      = IN_VMM_R3 IN_DIS IN_GMM_R3 IN_DBG $(VMM_COMMON_DEFS) VBOX_SVN_REV=$(VBOX_SVN_REV)
 ## @todo eliminate IN_GMM_R3
 ifdef VBOX_WITH_PREALLOC_RAM_BY_DEFAULT
  VMMR3_DEFS    += VBOX_WITH_PREALLOC_RAM_BY_DEFAULT
