Forgot makefile update
svn:sync-xref-src-repo-rev: r65616

--- a/src/VBox/Runtime/Makefile.kmk
+++ b/src/VBox/Runtime/Makefile.kmk
@@ -1,4 +1,4 @@
-# $Id: Makefile.kmk 32227 2010-09-03 06:37:27Z noreply@oracle.com $
+# $Id: Makefile.kmk 32288 2010-09-07 12:42:34Z noreply@oracle.com $
 ## @file
 # Sub-Makefile for the IPRT (IPRT).
 #
@@ -337,6 +337,7 @@ RuntimeR3_SOURCES       = \
 	common/string/ministring.cpp \
 	common/table/avlgcptr.cpp \
 	common/table/avlhcphys.cpp \
+	common/table/avlgcphys.cpp \
 	common/table/avllu32.cpp \
 	common/table/avlou32.cpp \
 	common/table/avlogcphys.cpp \
