--- a/src/VBox/Main/Makefile.kmk
+++ b/src/VBox/Main/Makefile.kmk
@@ -1,4 +1,4 @@
-# $Id: Makefile.kmk 32312 2010-09-08 11:43:37Z noreply@oracle.com $
+# $Id: Makefile.kmk 32324 2010-09-08 15:43:32Z noreply@oracle.com $
 ## @file
 # Makefile for the VBox Main module.
 #
@@ -360,6 +360,7 @@ ifdef VBOX_WITH_USB
 	HostUSBDeviceImpl.cpp
  VBoxSVC_SOURCES.darwin  +=  darwin/USBProxyServiceDarwin.cpp
  VBoxSVC_SOURCES.linux   +=   linux/USBProxyServiceLinux.cpp
+ VBoxSVC_SOURCES.linux   +=   linux/USBGetDevices.cpp
  VBoxSVC_SOURCES.os2     +=     os2/USBProxyServiceOs2.cpp
  VBoxSVC_SOURCES.solaris += solaris/USBProxyServiceSolaris.cpp
  VBoxSVC_SOURCES.win     +=     win/USBProxyServiceWindows.cpp
