--- a/src/VBox/Additions/common/crOpenGL/array/arrayspu.rc
+++ b/src/VBox/Additions/common/crOpenGL/array/arrayspu.rc
@@ -1,13 +1,10 @@
-/* $Id: arrayspu.rc 28800 2010-04-27 08:22:32Z noreply@oracle.com $ */
-
+/* $Id: arrayspu.rc 32372 2010-09-10 07:51:30Z noreply@oracle.com $ */
 /** @file
- *
- * VBoxDisp -- Windows Guest crOpenGL ICD
- *
+ * VBoxOGLarrayspu.so - Resouce file containing version info and icon.
  */
 
 /*
- * Copyright (C) 2009 Oracle Corporation
+ * Copyright (C) 2009-2010 Oracle Corporation
  *
  * This file is part of VirtualBox Open Source Edition (OSE), as
  * available from http://www.virtualbox.org. This file is free software;
@@ -42,7 +39,7 @@ BEGIN
          VALUE "InternalName",     "VBoxOGLarrayspu\0"
          VALUE "LegalCopyright",   VBOX_RC_LEGAL_COPYRIGHT
          VALUE "OriginalFilename", "VBoxOGLarrayspu.dll\0"
-         VALUE "ProductName",      "VirtualBox Guest Additions\0"
+         VALUE "ProductName",      VBOX_PRODUCT " Guest Additions\0"
          VALUE "ProductVersion",   VBOX_VERSION_MAJOR "." VBOX_VERSION_MINOR "." VBOX_VERSION_BUILD "." VBOX_SVN_REV "\0"
       END
    END
