rc branding fixes part 2
svn:sync-xref-src-repo-rev: r65729

--- a/src/VBox/Additions/WINNT/SharedFolders/redirector/sys/VBoxSF.rc
+++ b/src/VBox/Additions/WINNT/SharedFolders/redirector/sys/VBoxSF.rc
@@ -1,6 +1,6 @@
-/* $Id: VBoxSF.rc 32372 2010-09-10 07:51:30Z noreply@oracle.com $ */
+/* $Id: VBoxSF.rc 32375 2010-09-10 09:10:21Z noreply@oracle.com $ */
 /** @file
- * VBoxSF - Resouce file containing version info and icon.
+ * VBoxSF - Resource file containing version info and icon.
  */
 
 /*
