--- a/src/VBox/Additions/common/VBoxGuest/win/VBoxGuest.rc
+++ b/src/VBox/Additions/common/VBoxGuest/win/VBoxGuest.rc
@@ -1,6 +1,6 @@
-/* $Id: VBoxGuest.rc 32372 2010-09-10 07:51:30Z noreply@oracle.com $ */
+/* $Id: VBoxGuest.rc 32375 2010-09-10 09:10:21Z noreply@oracle.com $ */
 /** @file
- * VBoxGuest - Resouce file containing version info and icon.
+ * VBoxGuest - Resource file containing version info and icon.
  */
 
 /*
