--- a/src/VBox/Additions/common/VBoxService/VBoxService-win.rc
+++ b/src/VBox/Additions/common/VBoxService/VBoxService-win.rc
@@ -1,6 +1,6 @@
-/* $Id: VBoxService-win.rc 32372 2010-09-10 07:51:30Z noreply@oracle.com $ */
+/* $Id: VBoxService-win.rc 32375 2010-09-10 09:10:21Z noreply@oracle.com $ */
 /** @file
- * VBoxService - Resouce file containing version info and icon.
+ * VBoxService - Resource file containing version info and icon.
  */
 
 /*
