--- a/src/VBox/Additions/common/crOpenGL/VBoxCROGL.rc
+++ b/src/VBox/Additions/common/crOpenGL/VBoxCROGL.rc
@@ -1,6 +1,6 @@
-/* $Id: VBoxCROGL.rc 32372 2010-09-10 07:51:30Z noreply@oracle.com $ */
+/* $Id: VBoxCROGL.rc 32375 2010-09-10 09:10:21Z noreply@oracle.com $ */
 /** @file
- * VBoxCROGL - Resouce file containing version info and icon.
+ * VBoxCROGL - Resource file containing version info and icon.
  */
 
 /*
