--- a/src/VBox/Additions/common/crOpenGL/array/arrayspu.rc
+++ b/src/VBox/Additions/common/crOpenGL/array/arrayspu.rc
@@ -1,6 +1,6 @@
-/* $Id: arrayspu.rc 32372 2010-09-10 07:51:30Z noreply@oracle.com $ */
+/* $Id: arrayspu.rc 32375 2010-09-10 09:10:21Z noreply@oracle.com $ */
 /** @file
- * VBoxOGLarrayspu.so - Resouce file containing version info and icon.
+ * VBoxOGLarrayspu.so - Resource file containing version info and icon.
  */
 
 /*
