--- a/src/VBox/Additions/common/crOpenGL/feedback/feedbackspu.rc
+++ b/src/VBox/Additions/common/crOpenGL/feedback/feedbackspu.rc
@@ -1,6 +1,6 @@
-/* $Id: feedbackspu.rc 32372 2010-09-10 07:51:30Z noreply@oracle.com $ */
+/* $Id: feedbackspu.rc 32375 2010-09-10 09:10:21Z noreply@oracle.com $ */
 /** @file
- * VBoxOGLfeedbackspu - Resouce file containing version info and icon.
+ * VBoxOGLfeedbackspu - Resource file containing version info and icon.
  */
 
 /*
