--- a/src/VBox/Additions/common/crOpenGL/pack/packspu.rc
+++ b/src/VBox/Additions/common/crOpenGL/pack/packspu.rc
@@ -1,6 +1,6 @@
-/* $Id: packspu.rc 32372 2010-09-10 07:51:30Z noreply@oracle.com $ */
+/* $Id: packspu.rc 32375 2010-09-10 09:10:21Z noreply@oracle.com $ */
 /** @file
- * VBoxOGLpackspu.so - Resouce file containing version info and icon.
+ * VBoxOGLpackspu.so - Resource file containing version info and icon.
  */
 
 /*
