--- a/src/VBox/Additions/common/crOpenGL/passthrough/passthroughspu.rc
+++ b/src/VBox/Additions/common/crOpenGL/passthrough/passthroughspu.rc
@@ -1,10 +1,10 @@
-/* $Id: passthroughspu.rc 32372 2010-09-10 07:51:30Z noreply@oracle.com $ */
+/* $Id: passthroughspu.rc 32375 2010-09-10 09:10:21Z noreply@oracle.com $ */
 /** @file
- * VBoxService - Resouce file containing version info and icon.
+ * VBoxOGLpassthroughspu - Resource file containing version info and icon.
  */
 
 /*
- * Copyright (C) 2009 Oracle Corporation
+ * Copyright (C) 2009-2010 Oracle Corporation
  *
  * This file is part of VirtualBox Open Source Edition (OSE), as
  * available from http://www.virtualbox.org. This file is free software;
