--- a/src/VBox/HostDrivers/Support/win/VBoxDrv.rc
+++ b/src/VBox/HostDrivers/Support/win/VBoxDrv.rc
@@ -1,10 +1,10 @@
-/* $Id: VBoxDrv.rc 28800 2010-04-27 08:22:32Z noreply@oracle.com $ */
+/* $Id: VBoxDrv.rc 32375 2010-09-10 09:10:21Z noreply@oracle.com $ */
 /** @file
  * VirtualBox Support Driver - Windows Resource File.
  */
 
 /*
- * Copyright (C) 2006-2009 Oracle Corporation
+ * Copyright (C) 2006-2010 Oracle Corporation
  *
  * This file is part of VirtualBox Open Source Edition (OSE), as
  * available from http://www.virtualbox.org. This file is free software;
@@ -48,7 +48,7 @@ BEGIN
          VALUE "InternalName",     "VBoxDrv.sys\0"
          VALUE "LegalCopyright",   VBOX_RC_LEGAL_COPYRIGHT
          VALUE "OriginalFilename", "VBoxDrv.sys\0"
-         VALUE "ProductName",      "Sun VirtualBox\0"
+         VALUE "ProductName",      VBOX_PRODUCT "\0"
          VALUE "ProductVersion",   VBOX_VERSION_MAJOR "." VBOX_VERSION_MINOR "." VBOX_VERSION_BUILD ".r" VBOX_SVN_REV "\0"
       END
    END
