--- a/src/VBox/Installer/win/Stub/VBoxStub.rc
+++ b/src/VBox/Installer/win/Stub/VBoxStub.rc
@@ -1,10 +1,10 @@
-/* $Id: VBoxStub.rc 31667 2010-08-13 15:57:03Z noreply@oracle.com $*/
+/* $Id: VBoxStub.rc 32375 2010-09-10 09:10:21Z noreply@oracle.com $*/
 /** @file
  * Resource file for the Windows install stub program.
  */
 
 /*
- * Copyright (C) 2009 Oracle Corporation
+ * Copyright (C) 2009-2010 Oracle Corporation
  *
  * This file is part of VirtualBox Open Source Edition (OSE), as
  * available from http://www.virtualbox.org. This file is free software;
@@ -40,7 +40,7 @@ BEGIN
          VALUE "InternalName",     "VirtualBox\0"
          VALUE "LegalCopyright",   VBOX_RC_LEGAL_COPYRIGHT
          VALUE "OriginalFilename", "VirtualBox.exe\0"
-         VALUE "ProductName",      "VirtualBox\0"
+         VALUE "ProductName",      VBOX_PRODUCT "\0"
          VALUE "ProductVersion",   VBOX_VERSION_MAJOR "." VBOX_VERSION_MINOR "." VBOX_VERSION_BUILD "." VBOX_SVN_REV "\0"
       END
    END
