--- a/src/libs/zlib-1.2.1/Makefile.kmk
+++ b/src/libs/zlib-1.2.1/Makefile.kmk
@@ -1,4 +1,4 @@
-# $Id: Makefile.kmk 31594 2010-08-12 09:56:25Z noreply@oracle.com $
+# $Id: Makefile.kmk 32383 2010-09-10 09:56:46Z noreply@oracle.com $
 ## @file
 # Sub-Makefile for zlib.
 #
@@ -20,8 +20,8 @@ include $(KBUILD_PATH)/subheader.kmk
 
 LIBRARIES += VBox-zlib
 if1of ($(KBUILD_TARGET),os2 win)
- # only required for (now) disabled VBoxFidHdd
- # LIBRARIES += VBox-zlib-static
+ # only required for vbox-img
+ LIBRARIES += VBox-zlib-static
 endif
 VBox-zlib_TEMPLATE = VBOXR3
 VBox-zlib_DEFS = verbose=-1
