more branding and header fixes
svn:sync-xref-src-repo-rev: r65753

--- a/src/VBox/HostDrivers/VBoxNetFlt/win/VBoxNetFlt-win.rc
+++ b/src/VBox/HostDrivers/VBoxNetFlt/win/VBoxNetFlt-win.rc
@@ -1,4 +1,4 @@
-/* $Id: VBoxNetFlt-win.rc 32375 2010-09-10 09:10:21Z noreply@oracle.com $ */
+/* $Id: VBoxNetFlt-win.rc 32394 2010-09-10 12:13:11Z noreply@oracle.com $ */
 /** @file
  * VBoxNetFlt - Resource file containing version info and icon.
  */
@@ -43,7 +43,7 @@ BEGIN
       BEGIN
          VALUE "CompanyName",      VBOX_RC_COMPANY_NAME
          VALUE "FileDescription",  DESCRIPTION_STR
-         VALUE "FileVersion",      VBOX_VERSION_MAJOR "." VBOX_VERSION_MINOR "." VBOX_VERSION_BUILD ".r" VBOX_SVN_REV "\0"
+         VALUE "FileVersion",      VBOX_VERSION_MAJOR "." VBOX_VERSION_MINOR "." VBOX_VERSION_BUILD "." VBOX_SVN_REV "\0"
          VALUE "InternalName",     FILENAME_STR
          VALUE "LegalCopyright",   VBOX_RC_LEGAL_COPYRIGHT
          VALUE "OriginalFilename", FILENAME_STR
