--- a/src/VBox/Additions/WINNT/Graphics/Miniport/Mirror/vrdpvd.rc
+++ b/src/VBox/Additions/WINNT/Graphics/Miniport/Mirror/vrdpvd.rc
@@ -1,4 +1,4 @@
-/* $Id: vrdpvd.rc 32372 2010-09-10 07:51:30Z noreply@oracle.com $ */
+/* $Id: vrdpvd.rc 32394 2010-09-10 12:13:11Z noreply@oracle.com $ */
 /** @file
  * vrdpvd - Resource file containing version info and icon.
  */
@@ -34,12 +34,12 @@ BEGIN
       BEGIN
          VALUE "CompanyName",      VBOX_RC_COMPANY_NAME
          VALUE "FileDescription",  "VirtualBox Mirror Video Driver\0"
-         VALUE "FileVersion",      VBOX_VERSION_MAJOR "." VBOX_VERSION_MINOR "." VBOX_VERSION_BUILD "\0"
+         VALUE "FileVersion",      VBOX_VERSION_MAJOR "." VBOX_VERSION_MINOR "." VBOX_VERSION_BUILD "." VBOX_SVN_REV "\0"
          VALUE "InternalName",     "VRdpvd\0"
          VALUE "LegalCopyright",   VBOX_RC_LEGAL_COPYRIGHT
          VALUE "OriginalFilename", "VRdpvd.sys\0"
          VALUE "ProductName",      VBOX_PRODUCT " Guest Additions\0"
-         VALUE "ProductVersion",   VBOX_VERSION_MAJOR "." VBOX_VERSION_MINOR "." VBOX_VERSION_BUILD "\0"
+         VALUE "ProductVersion",   VBOX_VERSION_MAJOR "." VBOX_VERSION_MINOR "." VBOX_VERSION_BUILD ".r" VBOX_SVN_REV "\0"
       END
    END
    BLOCK "VarFileInfo"
