--- a/src/VBox/Additions/WINNT/Graphics/Miniport/wddm/VBoxVideoWddm.rc
+++ b/src/VBox/Additions/WINNT/Graphics/Miniport/wddm/VBoxVideoWddm.rc
@@ -1,4 +1,4 @@
-/* $Id: VBoxVideoWddm.rc 32372 2010-09-10 07:51:30Z noreply@oracle.com $ */
+/* $Id: VBoxVideoWddm.rc 32394 2010-09-10 12:13:11Z noreply@oracle.com $ */
 /** @file
  * VBoxVideoWddm - Resource file containing version info and icon.
  */
@@ -39,7 +39,7 @@ BEGIN
          VALUE "LegalCopyright",   VBOX_RC_LEGAL_COPYRIGHT
          VALUE "OriginalFilename", "VBoxVideoWddm.sys\0"
          VALUE "ProductName",      VBOX_PRODUCT " Guest Additions\0"
-         VALUE "ProductVersion",   VBOX_VERSION_MAJOR "." VBOX_VERSION_MINOR "." VBOX_VERSION_BUILD "." VBOX_SVN_REV "\0"
+         VALUE "ProductVersion",   VBOX_VERSION_MAJOR "." VBOX_VERSION_MINOR "." VBOX_VERSION_BUILD ".r" VBOX_SVN_REV "\0"
       END
    END
    BLOCK "VarFileInfo"
