--- a/src/VBox/Additions/WINNT/Graphics/Wine/switcher/d3d8.rc
+++ b/src/VBox/Additions/WINNT/Graphics/Wine/switcher/d3d8.rc
@@ -1,4 +1,4 @@
-/* $Id: d3d8.rc 32372 2010-09-10 07:51:30Z noreply@oracle.com $ */
+/* $Id: d3d8.rc 32394 2010-09-10 12:13:11Z noreply@oracle.com $ */
 /** @file
  * VBoxD3D8 - Resource file containing version info and icon.
  */
@@ -40,7 +40,7 @@ BEGIN
          VALUE "LegalCopyright",   VBOX_RC_LEGAL_COPYRIGHT
          VALUE "OriginalFilename", "D3D8.dll\0"
          VALUE "ProductName",      VBOX_PRODUCT " Guest Additions\0"
-         VALUE "ProductVersion",   VBOX_VERSION_MAJOR "." VBOX_VERSION_MINOR "." VBOX_VERSION_BUILD "." VBOX_SVN_REV "\0"
+         VALUE "ProductVersion",   VBOX_VERSION_MAJOR "." VBOX_VERSION_MINOR "." VBOX_VERSION_BUILD ".r" VBOX_SVN_REV "\0"
       END
    END
    BLOCK "VarFileInfo"
