--- a/src/VBox/Additions/common/crOpenGL/feedback/feedbackspu.rc
+++ b/src/VBox/Additions/common/crOpenGL/feedback/feedbackspu.rc
@@ -1,4 +1,4 @@
-/* $Id: feedbackspu.rc 32375 2010-09-10 09:10:21Z noreply@oracle.com $ */
+/* $Id: feedbackspu.rc 32394 2010-09-10 12:13:11Z noreply@oracle.com $ */
 /** @file
  * VBoxOGLfeedbackspu - Resource file containing version info and icon.
  */
@@ -40,7 +40,7 @@ BEGIN
          VALUE "LegalCopyright",   VBOX_RC_LEGAL_COPYRIGHT
          VALUE "OriginalFilename", "VBoxOGLfeedbackpu.dll\0"
          VALUE "ProductName",      VBOX_PRODUCT " Guest Additions\0"
-         VALUE "ProductVersion",   VBOX_VERSION_MAJOR "." VBOX_VERSION_MINOR "." VBOX_VERSION_BUILD "." VBOX_SVN_REV "\0"
+         VALUE "ProductVersion",   VBOX_VERSION_MAJOR "." VBOX_VERSION_MINOR "." VBOX_VERSION_BUILD ".r" VBOX_SVN_REV "\0"
       END
    END
    BLOCK "VarFileInfo"
