--- a/src/VBox/HostDrivers/VBoxUSB/win/Filter/USBFilter.rc
+++ b/src/VBox/HostDrivers/VBoxUSB/win/Filter/USBFilter.rc
@@ -1,4 +1,4 @@
-/* $Id: USBFilter.rc 32375 2010-09-10 09:10:21Z noreply@oracle.com $ */
+/* $Id: USBFilter.rc 32394 2010-09-10 12:13:11Z noreply@oracle.com $ */
 /** @file
  * VBoxUSBFilter - Resource file containing version info and icon.
  */
@@ -35,7 +35,7 @@ BEGIN
       BEGIN
          VALUE "CompanyName",      VBOX_RC_COMPANY_NAME
          VALUE "FileDescription",  "VirtualBox USB Filter Driver\0"
-         VALUE "FileVersion",      VBOX_VERSION_MAJOR "." VBOX_VERSION_MINOR "." VBOX_VERSION_BUILD ".r" VBOX_SVN_REV "\0"
+         VALUE "FileVersion",      VBOX_VERSION_MAJOR "." VBOX_VERSION_MINOR "." VBOX_VERSION_BUILD "." VBOX_SVN_REV "\0"
          VALUE "InternalName",     "VBoxUSBFlt.sys\0"
          VALUE "LegalCopyright",   VBOX_RC_LEGAL_COPYRIGHT
          VALUE "OriginalFilename", "VBoxUSBFlt.sys\0"
