VD: Fun with DMG images, booting from them seems to work
svn:sync-xref-src-repo-rev: r65797

--- a/src/VBox/Devices/Storage/testcase/Makefile.kmk
+++ b/src/VBox/Devices/Storage/testcase/Makefile.kmk
@@ -1,4 +1,4 @@
-# $Id: Makefile.kmk 32380 2010-09-10 09:45:19Z noreply@oracle.com $
+# $Id: Makefile.kmk 32432 2010-09-12 16:09:57Z alexander.eichner@oracle.com $
 ## @file
 # Sub-Makefile for the storage device & driver testcases.
 #
@@ -93,7 +93,8 @@ ifdef VBOX_WITH_TESTCASES
 	$(VBOX_PATH_DEVICES_SRC)/Storage/VmdkHDDCore.cpp \
 	$(VBOX_PATH_DEVICES_SRC)/Storage/VDIHDDCore.cpp \
 	$(VBOX_PATH_DEVICES_SRC)/Storage/VHDHDDCore.cpp \
-	$(VBOX_PATH_DEVICES_SRC)/Storage/ParallelsHDDCore.cpp
+	$(VBOX_PATH_DEVICES_SRC)/Storage/ParallelsHDDCore.cpp \
+	$(VBOX_PATH_DEVICES_SRC)/Storage/DMGHDDCore.cpp
  ifdef VBOX_WITH_NEW_IO_CODE
  vbox-img_DEFS += VBOX_WITH_NEW_IO_CODE
  endif
