Additions/x11/vboxmouse: small addition to r65904
svn:sync-xref-src-repo-rev: r65906

--- a/src/VBox/Additions/x11/vboxmouse/Makefile.kmk
+++ b/src/VBox/Additions/x11/vboxmouse/Makefile.kmk
@@ -1,4 +1,4 @@
-# $Id: Makefile.kmk 32523 2010-09-15 14:48:26Z noreply@oracle.com $
+# $Id: Makefile.kmk 32524 2010-09-15 15:04:04Z noreply@oracle.com $
 ## @file
 # Sub-Makefile for the VBox Additions XFree86 and X.org mouse drivers.
 #
@@ -264,7 +264,7 @@ $$(PATH_vboxmouse_drv_13)/tstvboxmouse13.run: $$(INSTARGET_vboxmouse_drv_13)
 	    $(INSTARGET_vboxmouse_drv_13) $(OUR_PATH_VBOXMOUSE)/undefined_15
 	$(QUIET)$(APPEND) -t "$@" "done"
 
-ifeq ($(KBUILD_TARGET),linux)
+if1of ($(KBUILD_TARGET),linux solaris)
      TESTING  += $(PATH_vboxmouse_drv_14)/tstvboxmouse14.run
      OTHERS += $(PATH_vboxmouse_drv_14)/tstvboxmouse14.run
 $$(PATH_vboxmouse_drv_14)/tstvboxmouse14.run: $$(INSTARGET_vboxmouse_drv_14)
