Storage/VBoxHDD: replace custom open flags with regular IPRT file open flags, introduce user-providable filesystem access interface, eliminate dependency on PGM geometry structure, change pvBuffer/cbBuffer parameter ordering to the usual conventions, eliminate the remains of the old I/O code, make more plugin methods optional to reduce redundancy, lots of cleanups
Storage/DrvVD+testcases,Main/Medium+Frontends: adapt to VBoxHDD changes, logging fixes

Storage/VDI+VMDK+DMG+Raw+VHD+Parallels+VCI: made as similar to each other as possible, added inline VFS wrappers to improve readability, full VFS support, VDI files are now 4K aligned, eliminate the remains of the old I/O code, various more or less severe bugfixes, code sort

Storage/iSCSI: support disks bigger than 2T, streamline the code to be more similar to the file-based backends, memory leak fix, error code usage like file-based backends, code sort

log+err: added new error codes/log groups and eliminated unused old ones


svn:sync-xref-src-repo-rev: r65918

--- a/src/VBox/Devices/Makefile.kmk
+++ b/src/VBox/Devices/Makefile.kmk
@@ -1,4 +1,4 @@
-# $Id: Makefile.kmk 32471 2010-09-14 10:26:07Z noreply@oracle.com $
+# $Id: Makefile.kmk 32536 2010-09-15 18:25:32Z klaus.espenlaub@oracle.com $
 ## @file
 # Top-level sub-makefile for the devices, drivers and services.
 #
@@ -74,9 +74,6 @@ ifdef VBOX_WITH_USB
  endif
 else
  VBoxDDU_SDKS.win        = WINPSDK
-endif
-ifdef VBOX_WITH_NEW_IO_CODE
- VBoxDDU_DEFS           += VBOX_WITH_NEW_IO_CODE
 endif
 VBoxDDU_SOURCES          = \
 	Storage/VBoxHDD.cpp \
