--- a/src/VBox/Additions/WINNT/Installer/Makefile.kmk
+++ b/src/VBox/Additions/WINNT/Installer/Makefile.kmk
@@ -1,4 +1,4 @@
-# $Id: Makefile.kmk 32250 2010-09-06 13:55:20Z noreply@oracle.com $
+# $Id: Makefile.kmk 32620 2010-09-17 18:46:17Z noreply@oracle.com $
 ## @file
 # Sub-Makefile for the Windows Guest Additions Installer.
 #
@@ -135,10 +135,13 @@ ifdef VBOXWDDM
 DRIVER_FILES += \
 	$(PATH_BIN)/additions/VBoxVideoWddm.sys \
 	$(PATH_BIN)/additions/VBoxVideoWddm.inf \
-	$(PATH_BIN)/additions/VBoxVideoWddm.cat \
 	$(PATH_BIN)/additions/VBoxDispD3D.dll \
 	$(PATH_BIN)/additions/wined3dwddm.dll \
 	$(PATH_BIN)/additions/VBoxD3D9wddm.dll
+  ifdef VBOX_SIGN_ADDITIONS
+DRIVER_FILES += \
+	$(PATH_BIN)/additions/VBoxVideoWddm.cat
+  endif
  endif
 endif
 
