VBoxService: Added a simple testcase for guest user environment.
svn:sync-xref-src-repo-rev: r66041

--- a/src/VBox/Additions/common/VBoxService/Makefile.kmk
+++ b/src/VBox/Additions/common/VBoxService/Makefile.kmk
@@ -1,4 +1,4 @@
-# $Id: Makefile.kmk 31204 2010-07-29 12:45:01Z andreas.loeffler@oracle.com $
+# $Id: Makefile.kmk 32634 2010-09-20 12:00:44Z andreas.loeffler@oracle.com $
 ## @file
 # Sub-Makefile for the Cross Platform Guest Addition Services.
 #
@@ -17,6 +17,11 @@
 
 SUB_DEPTH = ../../../../..
 include	$(KBUILD_PATH)/subheader.kmk
+
+#
+# Incldue testcases.
+#
+include	testcase/Makefile.kmk
 
 #
 # Target lists.
