IPRT/process-win: Added extended user profile invocation (environment variables, registry hives etc).
svn:sync-xref-src-repo-rev: r66063

--- a/src/VBox/Additions/common/VBoxService/Makefile.kmk
+++ b/src/VBox/Additions/common/VBoxService/Makefile.kmk
@@ -1,4 +1,4 @@
-# $Id: Makefile.kmk 32635 2010-09-20 12:12:17Z noreply@oracle.com $
+# $Id: Makefile.kmk 32653 2010-09-21 07:45:00Z andreas.loeffler@oracle.com $
 ## @file
 # Sub-Makefile for the Cross Platform Guest Addition Services.
 #
@@ -120,6 +120,8 @@ if1of ($(KBUILD_TARGET), linux)
  VBoxService_LIBS        += \
 	crypt
 endif
+VBoxService_LIBS.win     += \
+	$(PATH_SDK_$(VBOX_WINDDK)_LIB)/Userenv.lib
 ifdef VBOX_WITH_GUEST_PROPS
  VBoxService_LIBS.win    += \
  	Secur32.lib \
